--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,24 @@ img {
   border-radius: 2px;
 }
 
+.line-portfolio::after {
+  content: "";
+  display: block;
+  height: 4px;
+  width: 77px;
+  position: absolute;
+  
+  right: 0;
+  bottom: -4px;
+  left: 99px;
+
+  background-color: var(--nav-button-color);
+  border-radius: 2px;
+}
+
+
+
+
 .header-link {
   font-family: "Roboto", sans-serif;
   color: var(--main-text-color);
@@ -162,7 +180,7 @@ img {
   
   transition-property: color;
   transition-duration: 250ms;
-  transition-timing-function: linear;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-list li:not(:first-child) {
@@ -191,7 +209,7 @@ img {
 
   transition-property: color;
   transition-duration: 250ms;
-  transition-timing-function: linear;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link-mail:hover,
@@ -207,7 +225,7 @@ img {
 
   transition-property: fill;
   transition-duration: 250ms;
-  transition-timing-function: linear;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link-mail:hover .mail-svg,
@@ -229,7 +247,7 @@ img {
 
   transition-property: color;
   transition-duration: 250ms;
-  transition-timing-function: linear;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link-phone:hover,
@@ -245,7 +263,7 @@ img {
 
   transition-property: fill;
   transition-duration: 250ms;
-  transition-timing-function: linear;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link-phone:hover .phone-svg,
@@ -290,6 +308,50 @@ img {
   border: 1px solid;
   border-color: transparent;
   border-radius: 5px;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 5;
+  background-color: rgba(0, 0, 0, 0.2);
+
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+  min-width: 528px;
+  min-height: 581px;
+  padding: 38px;
+
+  background-color: var(--background-color);
+
+}
+
+.modal-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  border-radius: 50%;
+  background-image: url(../images/close.svg);
 }
 
 /* features */
@@ -470,7 +532,7 @@ img {
 
   transition-property: background-color;
   transition-duration: 250ms;
-  transition-timing-function: linear;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icons-link:hover .social-icons-svg,
@@ -495,7 +557,7 @@ img {
 
   transition-property: fill;
   transition-duration: 250ms;
-  transition-timing-function: linear;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Clients */
@@ -537,7 +599,7 @@ img {
 
   transition-property: fill;
   transition-duration: 250ms;
-  transition-timing-function: linear;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -627,7 +689,7 @@ img {
 
   transition-property: background-color;
   transition-duration: 250ms;
-  transition-timing-function: linear;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .bg-social:hover .social-icons-svg,
@@ -675,7 +737,7 @@ img {
 
   transition-property: background-color color;
   transition-duration: 250ms;
-  transition-timing-function: linear;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-filter:hover,
@@ -703,6 +765,7 @@ img {
 
 .portfolio-link {
   display: block;
+  position: relative;
 }
 
 .portfolio-bottom {
@@ -712,7 +775,7 @@ img {
 .shadow {
   transition-property: box-shadow;
   transition-duration: 250ms;
-  transition-timing-function: linear;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -749,4 +812,38 @@ img {
 
 .item-social:not(:last-child) {
   margin-right: 10px;
+}
+
+.portfolio-div-overlap {
+  position: relative;
+
+  overflow: hidden;
+}
+
+
+.portfolio-overlap {
+  position: absolute;
+  top: 294px;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 294px;
+  padding: 63px 24px;
+
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+  color: var(--background-color);
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.portfolio-link:hover .portfolio-overlap,
+.portfolio-link:focus .portfolio-overlap {
+  transform: translateY(-294px);
 }
